[package]
name = "selya"
version = "0.1.0"
edition = "2021"
authors = ["Crinax <agreedeth@gmail.com>"]
description = "SELYA - Specific Language for Young and Adult :D"
repository = "https://github.com/Crinax/selya-rs.git"
readme = "https://github.com/Crinax/selya-rs/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.3.8"
features = ["derive"]
optional = true

[lib]
name = "selya"
path = "src/lib.rs"

[[bin]]
name = "selya"
path = "src/bin.rs"

[features]
default = []
executable = ["clap"]
